# bevy_skybox_cli

./: .gitignore  Cargo.toml  README.md  build_assets.sh
example/: Cargo.toml
example/src/: main.rs
src/: LICENSE.md  main.rs  shader_src.rs  texture.rs
src/cubemap/: equirectangular_to_cubemap.wgsl  mod.rs
src/ibl/: ibl_bake.wgsl  mod.rs
src/mipmap/: generate_mipmaps.wgsl  mod.rs
